[package]
name = "otel_dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen", "transport", "router"] }
tonic-prost = "0.14"
prost = "0.14"
axum = "0.8"
opentelemetry-proto = { version = "0.31", default-features = false, features = ["metrics", "gen-tonic", "gen-tonic-messages"] }
opentelemetry = { version = "0.31", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["metrics"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
